fix spacing

--- a/gee.css
+++ b/gee.css
@@ -20,11 +20,11 @@ header {
 }
 
 .subheader  {
-    margin: 0% 3% 0%;
+    margin: 0%;
 }
 
 .top {
-    margin: 0% 10% 10%;
+    margin: 0% 10% 5%;
 }
 
 /* nav buttons start */
